# wtn-einstein

./: .gitignore  AGENTS.md  README.md  pyproject.toml  爱恩斯坦棋课程设计实验报告.docx
.github/workflows/: ci.yml
scripts/: run_bot_fast.bat  run_bot_fast.sh  run_bot_slow.bat  run_bot_slow.sh
src/einstein_wtn/: __init__.py  adapter_stdio.py  agents.py  engine.py  game_controller.py  i18n.py  opening.py  replay.py  runner.py  time_manager.py  tournament.py  types.py  ui_contract.py  ui_tk.py  wtn_format.py  wtn_input.py  wtn_layout.py
tests/: conftest.py  test_adapter_stdio.py  test_agents.py  test_candidates.py  test_capture.py  test_controller_apply_text_move.py  test_controller_custom_layout.py  test_controller_legal_destinations.py  test_engine_inplace.py  test_expecti_eval.py  test_game_controller_human_ai.py  test_i18n.py  test_layouts.py  test_moves.py  test_opening.py  test_opening_expecti.py  test_opening_miniexpecti.py  test_replay_sample.py  test_terminal.py  test_time_manager.py  test_time_manager_preset.py  test_time_manager_stability.py  test_tournament.py  test_ui_self_check.py  test_wtn_format.py  test_wtn_input.py  test_wtn_layout_parse.py
tests/data/: sample.wtn.txt
